--- a/package.json
+++ b/package.json
@@ -1,43 +1,81 @@
 {
-  "name": "partnr",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "^17.0.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "partnr",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^13.5.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-scripts": "5.0.0",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "prettier": "prettier src -check",
+        "lint": "eslint src --color",
+        "lint-staged": "lint-staged --config lint-staged.js",
+        "husky-install": "husky install"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@reduxjs/toolkit": "^1.8.0",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^16.11.26",
+        "@types/react": "^17.0.41",
+        "@types/react-dom": "^17.0.14",
+        "@types/react-redux": "^7.1.23",
+        "@types/react-router-dom": "^5.3.3",
+        "@typescript-eslint/eslint-plugin": "5.15.0",
+        "@typescript-eslint/parser": "5.15.0",
+        "@typescript-eslint/scope-manager": "^5.15.0",
+        "babel-eslint": "10.1.0",
+        "eslint-config-airbnb": "19.0.4",
+        "eslint-config-airbnb-typescript": "16.1.4",
+        "eslint-config-prettier": "8.5.0",
+        "eslint-config-react-app": "7.0.0",
+        "eslint-import-resolver-typescript": "2.5.0",
+        "eslint-plugin-flowtype": "8.0.3",
+        "eslint-plugin-import": "2.25.4",
+        "eslint-plugin-jest": "26.1.2",
+        "eslint-plugin-jsx-a11y": "6.5.1",
+        "eslint-plugin-prettier": "4.0.0",
+        "eslint-plugin-react": "7.29.4",
+        "eslint-plugin-react-hooks": "4.3.0",
+        "eslint-webpack-plugin": "3.1.1",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.3.7",
+        "node-sass": "^7.0.1",
+        "prettier": "^2.6.0",
+        "prettier-eslint": "13.0.0",
+        "prettier-eslint-cli": "5.0.1",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "^6.2.2",
+        "redux": "^4.1.2",
+        "scss-loader": "0.0.1",
+        "tsc-files": "^1.1.3",
+        "typescript": "^4.6.2",
+        "typings-for-scss-modules-loader": "^1.5.1"
+    }
 }
