--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
             - name: lint
               run: npm run lint
             - name: typescript
-              run: npm run typescript
+              run: npm run typescript --if-present
             - name: build
               run: npm run build --if-present
