--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,7 @@
         "@typescript-eslint/no-explicit-any": [
             "error",
             {
-                "ignoreRestArgs": true
+                "ignoreRestArgs": false
             }
         ],
         "max-len": [
