--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "@date-io/date-fns": "^2.13.1",
         "@emotion/react": "^11.8.2",
         "@emotion/styled": "^11.8.1",
+        "@mui/base": "^5.0.0-alpha.75",
         "@mui/icons-material": "^5.5.1",
+        "@mui/lab": "^5.0.0-alpha.76",
         "@mui/material": "^5.5.2",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.4",
